--- a/manifest.json
+++ b/manifest.json
@@ -4,22 +4,5 @@
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#1e1e2e",
-  "theme_color": "#6c5ce7",
-  "description": "Offline çalışabilen gelişmiş müzik çalar",
-  "icons": [
-    {
-      "src": "icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ],
-  "related_applications": [],
-  "prefer_related_applications": false
+  "theme_color": "#6c5ce7"
 }
